compiladores/ProjetoBase/alterado/compilador.output
Terminais sem uso na gramática

    ARRAY
    OF
    TYPE
    NADA


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 $@3: %empty

    5 bloco: parte_declara_rotulos parte_declara_vars $@2 parte_declara_procs $@3 comando_composto

    6 parte_declara_vars: var

    7 $@4: %empty

    8 var: $@4 VAR declara_vars
    9    | %empty

   10 $@5: %empty

   11 declara_vars: declara_vars $@5 declara_var

   12 $@6: %empty

   13 declara_vars: $@6 declara_var

   14 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   15 tipo: IDENT

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 lista_idents: lista_idents VIRGULA IDENT
   19             | IDENT

   20 comando_composto: T_BEGIN comandos T_END

   21 comandos: comandos PONTO_E_VIRGULA comando
   22         | comando

   23 comando: comando_vazio
   24        | comando_sem_rotulo
   25        | NUM DOIS_PONTOS comando_sem_rotulo

   26 comando_vazio: %empty

   27 $@7: %empty

   28 comando_sem_rotulo: IDENT $@7 atribuicao_ou_proc
   29                   | leitura
   30                   | escrita
   31                   | repeticao
   32                   | condicional
   33                   | comando_composto
   34                   | desvio

   35 leitura: READ ABRE_PARENTESES lista_read FECHA_PARENTESES

   36 lista_read: lista_read VIRGULA IDENT
   37           | IDENT

   38 escrita: WRITE ABRE_PARENTESES lista_write FECHA_PARENTESES

   39 lista_write: lista_write VIRGULA expressao
   40            | expressao

   41 atribuicao_ou_proc: ATRIBUICAO expressao
   42                   | chamaProc

   43 expressao: expressao MAIOR expressao_simples
   44          | expressao MAIOR_IGUAL expressao_simples
   45          | expressao MENOR expressao_simples
   46          | expressao MENOR_IGUAL expressao_simples
   47          | expressao IGUAL expressao_simples
   48          | expressao DESIGUAL expressao_simples
   49          | expressao_simples

   50 expressao_simples: expressao_simples SOMA termo
   51                  | expressao_simples SUB termo
   52                  | expressao_simples OR termo
   53                  | termo

   54 termo: termo MULT fator
   55      | termo DIV fator
   56      | termo AND fator
   57      | fator

   58 fator: NUM

   59 $@8: %empty

   60 fator: IDENT $@8 atribui
   61      | TRUE
   62      | FALSE
   63      | NOT fator
   64      | ABRE_PARENTESES expressao FECHA_PARENTESES

   65 $@9: %empty

   66 $@10: %empty

   67 repeticao: WHILE $@9 expressao DO $@10 comando

   68 condicional: if_then
   69            | if_then ELSE comando_sem_rotulo

   70 $@11: %empty

   71 $@12: %empty

   72 if_then: IF $@11 expressao $@12 THEN comando_sem_rotulo

   73 parte_declara_procs: declara_procs
   74                    | declara_funcs
   75                    | comando_vazio

   76 declara_procs: declara_procs declara_proc
   77              | declara_proc

   78 $@13: %empty

   79 $@14: %empty

   80 declara_proc: PROCEDURE $@13 IDENT $@14 paramsFormais PONTO_E_VIRGULA blocoPF

   81 paramsFormais: ABRE_PARENTESES listaParamsForms FECHA_PARENTESES
   82              | %empty

   83 listaParamsForms: listaParamsForms PONTO_E_VIRGULA declaraParams
   84                 | declaraParams

   85 $@15: %empty

   86 declaraParams: $@15 declaraParam DOIS_PONTOS tipoParam

   87 $@16: %empty

   88 declaraParams: VAR $@16 declaraParam DOIS_PONTOS tipoParam

   89 declaraParam: declaraParam VIRGULA IDENT
   90             | IDENT

   91 tipoParam: IDENT

   92 $@17: %empty

   93 $@18: %empty

   94 $@19: %empty

   95 blocoPF: parte_declara_vars $@17 parte_declara_procs $@18 comando_composto $@19 PONTO_E_VIRGULA

   96 chamaProc: chamaProcParams

   97 chamaProcParams: paramsProc
   98                | %empty

   99 $@20: %empty

  100 paramsProc: ABRE_PARENTESES $@20 listaParams FECHA_PARENTESES

  101 $@21: %empty

  102 listaParams: listaParams VIRGULA $@21 expressao

  103 $@22: %empty

  104 listaParams: $@22 expressao

  105 declara_funcs: declara_funcs declara_func
  106              | declara_func

  107 $@23: %empty

  108 $@24: %empty

  109 declara_func: FUNCTION $@23 IDENT $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

  110 tipoFunc: IDENT

  111 $@25: %empty

  112 atribui: $@25 paramsProc
  113        | %empty

  114 parte_declara_rotulos: LABEL listanums PONTO_E_VIRGULA
  115                      | %empty

  116 listanums: listanums VIRGULA NUM
  117          | NUM

  118 desvio: GOTO NUM


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 35 38 64 81 100
    FECHA_PARENTESES (260) 2 35 38 64 81 100
    VIRGULA (261) 16 18 36 39 89 102 116
    PONTO_E_VIRGULA (262) 2 14 21 80 83 95 109 114
    DOIS_PONTOS (263) 14 25 86 88 109
    PONTO (264) 2
    T_BEGIN (265) 20
    T_END (266) 20
    VAR (267) 8 88
    IDENT (268) 2 15 16 17 18 19 28 36 37 60 80 89 90 91 109 110
    NUM (269) 25 58 116 117 118
    ATRIBUICAO (270) 41
    PROCEDURE (271) 80
    FUNCTION (272) 109
    GOTO (273) 118
    IF (274) 72
    THEN (275) 72
    ELSE (276) 69
    WHILE (277) 67
    DO (278) 67
    ARRAY (279)
    OF (280)
    LABEL (281) 114
    TYPE (282)
    AND (283) 56
    OR (284) 52
    NOT (285) 63
    SOMA (286) 50
    SUB (287) 51
    MULT (288) 54
    DIV (289) 55
    TRUE (290) 61
    FALSE (291) 62
    READ (292) 35
    WRITE (293) 38
    MAIOR (294) 43
    MAIOR_IGUAL (295) 44
    MENOR (296) 45
    MENOR_IGUAL (297) 46
    IGUAL (298) 47
    DESIGUAL (299) 48
    LOWER_THAN_ELSE (300)
    NADA (301)


Não terminais com as regras onde eles aparecem

    $accept (47)
        à esquerda: 0
    programa (48)
        à esquerda: 2
        à direita: 0
    $@1 (49)
        à esquerda: 1
        à direita: 2
    bloco (50)
        à esquerda: 5
        à direita: 2
    $@2 (51)
        à esquerda: 3
        à direita: 5
    $@3 (52)
        à esquerda: 4
        à direita: 5
    parte_declara_vars (53)
        à esquerda: 6
        à direita: 5 95
    var (54)
        à esquerda: 8 9
        à direita: 6
    $@4 (55)
        à esquerda: 7
        à direita: 8
    declara_vars (56)
        à esquerda: 11 13
        à direita: 8 11
    $@5 (57)
        à esquerda: 10
        à direita: 11
    $@6 (58)
        à esquerda: 12
        à direita: 13
    declara_var (59)
        à esquerda: 14
        à direita: 11 13
    tipo (60)
        à esquerda: 15
        à direita: 14
    lista_id_var (61)
        à esquerda: 16 17
        à direita: 14 16
    lista_idents (62)
        à esquerda: 18 19
        à direita: 2 18
    comando_composto (63)
        à esquerda: 20
        à direita: 5 33 95
    comandos (64)
        à esquerda: 21 22
        à direita: 20 21
    comando (65)
        à esquerda: 23 24 25
        à direita: 21 22 67
    comando_vazio (66)
        à esquerda: 26
        à direita: 23 75
    comando_sem_rotulo (67)
        à esquerda: 28 29 30 31 32 33 34
        à direita: 24 25 69 72
    $@7 (68)
        à esquerda: 27
        à direita: 28
    leitura (69)
        à esquerda: 35
        à direita: 29
    lista_read (70)
        à esquerda: 36 37
        à direita: 35 36
    escrita (71)
        à esquerda: 38
        à direita: 30
    lista_write (72)
        à esquerda: 39 40
        à direita: 38 39
    atribuicao_ou_proc (73)
        à esquerda: 41 42
        à direita: 28
    expressao (74)
        à esquerda: 43 44 45 46 47 48 49
        à direita: 39 40 41 43 44 45 46 47 48 64 67 72 102 104
    expressao_simples (75)
        à esquerda: 50 51 52 53
        à direita: 43 44 45 46 47 48 49 50 51 52
    termo (76)
        à esquerda: 54 55 56 57
        à direita: 50 51 52 53 54 55 56
    fator (77)
        à esquerda: 58 60 61 62 63 64
        à direita: 54 55 56 57 63
    $@8 (78)
        à esquerda: 59
        à direita: 60
    repeticao (79)
        à esquerda: 67
        à direita: 31
    $@9 (80)
        à esquerda: 65
        à direita: 67
    $@10 (81)
        à esquerda: 66
        à direita: 67
    condicional (82)
        à esquerda: 68 69
        à direita: 32
    if_then (83)
        à esquerda: 72
        à direita: 68 69
    $@11 (84)
        à esquerda: 70
        à direita: 72
    $@12 (85)
        à esquerda: 71
        à direita: 72
    parte_declara_procs (86)
        à esquerda: 73 74 75
        à direita: 5 95
    declara_procs (87)
        à esquerda: 76 77
        à direita: 73 76
    declara_proc (88)
        à esquerda: 80
        à direita: 76 77
    $@13 (89)
        à esquerda: 78
        à direita: 80
    $@14 (90)
        à esquerda: 79
        à direita: 80
    paramsFormais (91)
        à esquerda: 81 82
        à direita: 80 109
    listaParamsForms (92)
        à esquerda: 83 84
        à direita: 81 83
    declaraParams (93)
        à esquerda: 86 88
        à direita: 83 84
    $@15 (94)
        à esquerda: 85
        à direita: 86
    $@16 (95)
        à esquerda: 87
        à direita: 88
    declaraParam (96)
        à esquerda: 89 90
        à direita: 86 88 89
    tipoParam (97)
        à esquerda: 91
        à direita: 86 88
    blocoPF (98)
        à esquerda: 95
        à direita: 80 109
    $@17 (99)
        à esquerda: 92
        à direita: 95
    $@18 (100)
        à esquerda: 93
        à direita: 95
    $@19 (101)
        à esquerda: 94
        à direita: 95
    chamaProc (102)
        à esquerda: 96
        à direita: 42
    chamaProcParams (103)
        à esquerda: 97 98
        à direita: 96
    paramsProc (104)
        à esquerda: 100
        à direita: 97 112
    $@20 (105)
        à esquerda: 99
        à direita: 100
    listaParams (106)
        à esquerda: 102 104
        à direita: 100 102
    $@21 (107)
        à esquerda: 101
        à direita: 102
    $@22 (108)
        à esquerda: 103
        à direita: 104
    declara_funcs (109)
        à esquerda: 105 106
        à direita: 74 105
    declara_func (110)
        à esquerda: 109
        à direita: 105 106
    $@23 (111)
        à esquerda: 107
        à direita: 109
    $@24 (112)
        à esquerda: 108
        à direita: 109
    tipoFunc (113)
        à esquerda: 110
        à direita: 109
    atribui (114)
        à esquerda: 112 113
        à direita: 60
    $@25 (115)
        à esquerda: 111
        à direita: 112
    parte_declara_rotulos (116)
        à esquerda: 114 115
        à direita: 5
    listanums (117)
        à esquerda: 116 117
        à direita: 114 116
    desvio (118)
        à esquerda: 118
        à direita: 34


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


Estado 7

   19 lista_idents: IDENT •

    $padrão  reduzir usando a regra 19 (lista_idents)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   18 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


Estado 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


Estado 10

   18 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 12


Estado 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    LABEL  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 115 (parte_declara_rotulos)

    bloco                  ir ao estado 14
    parte_declara_rotulos  ir ao estado 15


Estado 12

   18 lista_idents: lista_idents VIRGULA IDENT •

    $padrão  reduzir usando a regra 18 (lista_idents)


Estado 13

  114 parte_declara_rotulos: LABEL • listanums PONTO_E_VIRGULA

    NUM  deslocar, e ir ao estado 16

    listanums  ir ao estado 17


Estado 14

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 18


Estado 15

    5 bloco: parte_declara_rotulos • parte_declara_vars $@2 parte_declara_procs $@3 comando_composto

    VAR      reduzir usando a regra 7 ($@4)
    $padrão  reduzir usando a regra 9 (var)

    parte_declara_vars  ir ao estado 19
    var                 ir ao estado 20
    $@4                 ir ao estado 21


Estado 16

  117 listanums: NUM •

    $padrão  reduzir usando a regra 117 (listanums)


Estado 17

  114 parte_declara_rotulos: LABEL listanums • PONTO_E_VIRGULA
  116 listanums: listanums • VIRGULA NUM

    VIRGULA          deslocar, e ir ao estado 22
    PONTO_E_VIRGULA  deslocar, e ir ao estado 23


Estado 18

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 19

    5 bloco: parte_declara_rotulos parte_declara_vars • $@2 parte_declara_procs $@3 comando_composto

    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 24


Estado 20

    6 parte_declara_vars: var •

    $padrão  reduzir usando a regra 6 (parte_declara_vars)


Estado 21

    8 var: $@4 • VAR declara_vars

    VAR  deslocar, e ir ao estado 25


Estado 22

  116 listanums: listanums VIRGULA • NUM

    NUM  deslocar, e ir ao estado 26


Estado 23

  114 parte_declara_rotulos: LABEL listanums PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 114 (parte_declara_rotulos)


Estado 24

    5 bloco: parte_declara_rotulos parte_declara_vars $@2 • parte_declara_procs $@3 comando_composto

    PROCEDURE  deslocar, e ir ao estado 27
    FUNCTION   deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 26 (comando_vazio)

    comando_vazio        ir ao estado 29
    parte_declara_procs  ir ao estado 30
    declara_procs        ir ao estado 31
    declara_proc         ir ao estado 32
    declara_funcs        ir ao estado 33
    declara_func         ir ao estado 34


Estado 25

    8 var: $@4 VAR • declara_vars

    $padrão  reduzir usando a regra 12 ($@6)

    declara_vars  ir ao estado 35
    $@6           ir ao estado 36


Estado 26

  116 listanums: listanums VIRGULA NUM •

    $padrão  reduzir usando a regra 116 (listanums)


Estado 27

   80 declara_proc: PROCEDURE • $@13 IDENT $@14 paramsFormais PONTO_E_VIRGULA blocoPF

    $padrão  reduzir usando a regra 78 ($@13)

    $@13  ir ao estado 37


Estado 28

  109 declara_func: FUNCTION • $@23 IDENT $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    $padrão  reduzir usando a regra 107 ($@23)

    $@23  ir ao estado 38


Estado 29

   75 parte_declara_procs: comando_vazio •

    $padrão  reduzir usando a regra 75 (parte_declara_procs)


Estado 30

    5 bloco: parte_declara_rotulos parte_declara_vars $@2 parte_declara_procs • $@3 comando_composto

    $padrão  reduzir usando a regra 4 ($@3)

    $@3  ir ao estado 39


Estado 31

   73 parte_declara_procs: declara_procs •
   76 declara_procs: declara_procs • declara_proc

    PROCEDURE  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 73 (parte_declara_procs)

    declara_proc  ir ao estado 40


Estado 32

   77 declara_procs: declara_proc •

    $padrão  reduzir usando a regra 77 (declara_procs)


Estado 33

   74 parte_declara_procs: declara_funcs •
  105 declara_funcs: declara_funcs • declara_func

    FUNCTION  deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 74 (parte_declara_procs)

    declara_func  ir ao estado 41


Estado 34

  106 declara_funcs: declara_func •

    $padrão  reduzir usando a regra 106 (declara_funcs)


Estado 35

    8 var: $@4 VAR declara_vars •
   11 declara_vars: declara_vars • $@5 declara_var

    IDENT    reduzir usando a regra 10 ($@5)
    $padrão  reduzir usando a regra 8 (var)

    $@5  ir ao estado 42


Estado 36

   13 declara_vars: $@6 • declara_var

    IDENT  deslocar, e ir ao estado 43

    declara_var   ir ao estado 44
    lista_id_var  ir ao estado 45


Estado 37

   80 declara_proc: PROCEDURE $@13 • IDENT $@14 paramsFormais PONTO_E_VIRGULA blocoPF

    IDENT  deslocar, e ir ao estado 46


Estado 38

  109 declara_func: FUNCTION $@23 • IDENT $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    IDENT  deslocar, e ir ao estado 47


Estado 39

    5 bloco: parte_declara_rotulos parte_declara_vars $@2 parte_declara_procs $@3 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 48

    comando_composto  ir ao estado 49


Estado 40

   76 declara_procs: declara_procs declara_proc •

    $padrão  reduzir usando a regra 76 (declara_procs)


Estado 41

  105 declara_funcs: declara_funcs declara_func •

    $padrão  reduzir usando a regra 105 (declara_funcs)


Estado 42

   11 declara_vars: declara_vars $@5 • declara_var

    IDENT  deslocar, e ir ao estado 43

    declara_var   ir ao estado 50
    lista_id_var  ir ao estado 45


Estado 43

   17 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 17 (lista_id_var)


Estado 44

   13 declara_vars: $@6 declara_var •

    $padrão  reduzir usando a regra 13 (declara_vars)


Estado 45

   14 declara_var: lista_id_var • DOIS_PONTOS tipo PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 51
    DOIS_PONTOS  deslocar, e ir ao estado 52


Estado 46

   80 declara_proc: PROCEDURE $@13 IDENT • $@14 paramsFormais PONTO_E_VIRGULA blocoPF

    $padrão  reduzir usando a regra 79 ($@14)

    $@14  ir ao estado 53


Estado 47

  109 declara_func: FUNCTION $@23 IDENT • $@24 paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    $padrão  reduzir usando a regra 108 ($@24)

    $@24  ir ao estado 54


Estado 48

   20 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  deslocar, e ir ao estado 48
    IDENT    deslocar, e ir ao estado 55
    NUM      deslocar, e ir ao estado 56
    GOTO     deslocar, e ir ao estado 57
    IF       deslocar, e ir ao estado 58
    WHILE    deslocar, e ir ao estado 59
    READ     deslocar, e ir ao estado 60
    WRITE    deslocar, e ir ao estado 61

    $padrão  reduzir usando a regra 26 (comando_vazio)

    comando_composto    ir ao estado 62
    comandos            ir ao estado 63
    comando             ir ao estado 64
    comando_vazio       ir ao estado 65
    comando_sem_rotulo  ir ao estado 66
    leitura             ir ao estado 67
    escrita             ir ao estado 68
    repeticao           ir ao estado 69
    condicional         ir ao estado 70
    if_then             ir ao estado 71
    desvio              ir ao estado 72


Estado 49

    5 bloco: parte_declara_rotulos parte_declara_vars $@2 parte_declara_procs $@3 comando_composto •

    $padrão  reduzir usando a regra 5 (bloco)


Estado 50

   11 declara_vars: declara_vars $@5 declara_var •

    $padrão  reduzir usando a regra 11 (declara_vars)


Estado 51

   16 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 73


Estado 52

   14 declara_var: lista_id_var DOIS_PONTOS • tipo PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 74

    tipo  ir ao estado 75


Estado 53

   80 declara_proc: PROCEDURE $@13 IDENT $@14 • paramsFormais PONTO_E_VIRGULA blocoPF

    ABRE_PARENTESES  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 82 (paramsFormais)

    paramsFormais  ir ao estado 77


Estado 54

  109 declara_func: FUNCTION $@23 IDENT $@24 • paramsFormais DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    ABRE_PARENTESES  deslocar, e ir ao estado 76

    $padrão  reduzir usando a regra 82 (paramsFormais)

    paramsFormais  ir ao estado 78


Estado 55

   28 comando_sem_rotulo: IDENT • $@7 atribuicao_ou_proc

    $padrão  reduzir usando a regra 27 ($@7)

    $@7  ir ao estado 79


Estado 56

   25 comando: NUM • DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  deslocar, e ir ao estado 80


Estado 57

  118 desvio: GOTO • NUM

    NUM  deslocar, e ir ao estado 81


Estado 58

   72 if_then: IF • $@11 expressao $@12 THEN comando_sem_rotulo

    $padrão  reduzir usando a regra 70 ($@11)

    $@11  ir ao estado 82


Estado 59

   67 repeticao: WHILE • $@9 expressao DO $@10 comando

    $padrão  reduzir usando a regra 65 ($@9)

    $@9  ir ao estado 83


Estado 60

   35 leitura: READ • ABRE_PARENTESES lista_read FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 84


Estado 61

   38 escrita: WRITE • ABRE_PARENTESES lista_write FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 85


Estado 62

   33 comando_sem_rotulo: comando_composto •

    $padrão  reduzir usando a regra 33 (comando_sem_rotulo)


Estado 63

   20 comando_composto: T_BEGIN comandos • T_END
   21 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  deslocar, e ir ao estado 86
    T_END            deslocar, e ir ao estado 87


Estado 64

   22 comandos: comando •

    $padrão  reduzir usando a regra 22 (comandos)


Estado 65

   23 comando: comando_vazio •

    $padrão  reduzir usando a regra 23 (comando)


Estado 66

   24 comando: comando_sem_rotulo •

    $padrão  reduzir usando a regra 24 (comando)


Estado 67

   29 comando_sem_rotulo: leitura •

    $padrão  reduzir usando a regra 29 (comando_sem_rotulo)


Estado 68

   30 comando_sem_rotulo: escrita •

    $padrão  reduzir usando a regra 30 (comando_sem_rotulo)


Estado 69

   31 comando_sem_rotulo: repeticao •

    $padrão  reduzir usando a regra 31 (comando_sem_rotulo)


Estado 70

   32 comando_sem_rotulo: condicional •

    $padrão  reduzir usando a regra 32 (comando_sem_rotulo)


Estado 71

   68 condicional: if_then •
   69            | if_then • ELSE comando_sem_rotulo

    ELSE  deslocar, e ir ao estado 88

    $padrão  reduzir usando a regra 68 (condicional)


Estado 72

   34 comando_sem_rotulo: desvio •

    $padrão  reduzir usando a regra 34 (comando_sem_rotulo)


Estado 73

   16 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 16 (lista_id_var)


Estado 74

   15 tipo: IDENT •

    $padrão  reduzir usando a regra 15 (tipo)


Estado 75

   14 declara_var: lista_id_var DOIS_PONTOS tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 89


Estado 76

   81 paramsFormais: ABRE_PARENTESES • listaParamsForms FECHA_PARENTESES

    VAR  deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 85 ($@15)

    listaParamsForms  ir ao estado 91
    declaraParams     ir ao estado 92
    $@15              ir ao estado 93


Estado 77

   80 declara_proc: PROCEDURE $@13 IDENT $@14 paramsFormais • PONTO_E_VIRGULA blocoPF

    PONTO_E_VIRGULA  deslocar, e ir ao estado 94


Estado 78

  109 declara_func: FUNCTION $@23 IDENT $@24 paramsFormais • DOIS_PONTOS tipoFunc PONTO_E_VIRGULA blocoPF

    DOIS_PONTOS  deslocar, e ir ao estado 95


Estado 79

   28 comando_sem_rotulo: IDENT $@7 • atribuicao_ou_proc

    ABRE_PARENTESES  deslocar, e ir ao estado 96
    ATRIBUICAO       deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 98 (chamaProcParams)

    atribuicao_ou_proc  ir ao estado 98
    chamaProc           ir ao estado 99
    chamaProcParams     ir ao estado 100
    paramsProc          ir ao estado 101


Estado 80

   25 comando: NUM DOIS_PONTOS • comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 48
    IDENT    deslocar, e ir ao estado 55
    GOTO     deslocar, e ir ao estado 57
    IF       deslocar, e ir ao estado 58
    WHILE    deslocar, e ir ao estado 59
    READ     deslocar, e ir ao estado 60
    WRITE    deslocar, e ir ao estado 61

    comando_composto    ir ao estado 62
    comando_sem_rotulo  ir ao estado 102
    leitura             ir ao estado 67
    escrita             ir ao estado 68
    repeticao           ir ao estado 69
    condicional         ir ao estado 70
    if_then             ir ao estado 71
    desvio              ir ao estado 72


Estado 81

  118 desvio: GOTO NUM •

    $padrão  reduzir usando a regra 118 (desvio)


Estado 82

   72 if_then: IF $@11 • expressao $@12 THEN comando_sem_rotulo

    ABRE_PARENTESES  deslocar, e ir ao estado 103
    IDENT            deslocar, e ir ao estado 104
    NUM              deslocar, e ir ao estado 105
    NOT              deslocar, e ir ao estado 106
    TRUE             deslocar, e ir ao estado 107
    FALSE            deslocar, e ir ao estado 108

    expressao          ir ao estado 109
    expressao_simples  ir ao estado 110
    termo              ir ao estado 111
    fator              ir ao estado 112


Estado 83

   67 repeticao: WHILE $@9 • expressao DO $@10 comando

    ABRE_PARENTESES  deslocar, e ir ao estado 103
    IDENT            deslocar, e ir ao estado 104
    NUM              deslocar, e ir ao estado 105
    NOT              deslocar, e ir ao estado 106
    TRUE             deslocar, e ir ao estado 107
    FALSE            deslocar, e ir ao estado 108

    expressao          ir ao estado 113
    expressao_simples  ir ao estado 110
    termo              ir ao estado 111
    fator              ir ao estado 112


Estado 84

   35 leitura: READ ABRE_PARENTESES • lista_read FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 114

    lista_read  ir ao estado 115


Estado 85

   38 escrita: WRITE ABRE_PARENTESES • lista_write FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 103
    IDENT            deslocar, e ir ao estado 104
    NUM              deslocar, e ir ao estado 105
    NOT              deslocar, e ir ao estado 106
    TRUE             deslocar, e ir ao estado 107
    FALSE            deslocar, e ir ao estado 108

    lista_write        ir ao estado 116
    expressao          ir ao estado 117
    expressao_simples  ir ao estado 110
    termo              ir ao estado 111
    fator              ir ao estado 112


Estado 86

   21 comandos: comandos PONTO_E_VIRGULA • comando

    T_BEGIN  deslocar, e ir ao estado 48
    IDENT    deslocar, e ir ao estado 55
    NUM      deslocar, e ir ao estado 56
    GOTO     deslocar, e ir ao estado 57
    IF       deslocar, e ir ao estado 58
    WHILE    deslocar, e ir ao estado 59
    READ     deslocar, e ir ao estado 60
    WRITE    deslocar, e ir ao estado 61

    $padrão  reduzir usando a regra 26 (comando_vazio)

    comando_composto    ir ao estado 62
    comando             ir ao estado 118
    comando_vazio       ir ao estado 65
    comando_sem_rotulo  ir ao estado 66
    leitura             ir ao estado 67
    escrita             ir ao estado 68
    repeticao           ir ao estado 69
    condicional         ir ao estado 70
    if_then             ir ao estado 71
    desvio              ir ao estado 72


Estado 87

   20 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 20 (comando_composto)


Estado 88

   69 condicional: if_then ELSE • comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 48
    IDENT    deslocar, e ir ao estado 55
    GOTO     deslocar, e ir ao estado 57
    IF       deslocar, e ir ao estado 58
    WHILE    deslocar, e ir ao estado 59
    READ     deslocar, e ir ao estado 60
    WRITE    deslocar, e ir ao estado 61

    comando_composto    ir ao estado 62
    comando_sem_rotulo  ir ao estado 119
    leitura             ir ao estado 67
    escrita             ir ao estado 68
    repeticao           ir ao estado 69
    condicional         ir ao estado 70
    if_then             ir ao estado 71
    desvio              ir ao estado 72


Estado 89

   14 declara_var: lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 14 (declara_var)


Estado 90

   88 declaraParams: VAR • $@16 declaraParam DOIS_PONTOS tipoParam

    $padrão  reduzir usando a regra 87 ($@16)

    $@16  ir ao estado 120


Estado 91

   81 paramsFormais: ABRE_PARENTESES listaParamsForms • FECHA_PARENTESES
   83 listaParamsForms: listaParamsForms • PONTO_E_VIRGULA declaraParams

    FECHA_PARENTESES  deslocar, e ir ao estado 121
    PONTO_E_VIRGULA   deslocar, e ir ao estado 122


Estado 92

   84 listaParamsForms: declaraParams •

    $padrão  reduzir usando a regra 84 (listaParamsForms)


Estado 93

   86 declaraParams: $@15 • declaraParam DOIS_PONTOS tipoParam

    IDENT  deslocar, e ir ao estado 123

    declaraParam  ir ao estado 124


Estado 94

   80 declara_proc: PROCEDURE $@13 IDENT $@14 paramsFormais PONTO_E_VIRGULA • blocoPF

    VAR      reduzir usando a regra 7 ($@4)
    $padrão  reduzir usando a regra 9 (var)

    parte_declara_vars  ir ao estado 125
    var                 ir ao estado 20
    $@4                 ir ao estado 21
    blocoPF             ir ao estado 126


Estado 95

  109 declara_func: FUNCTION $@23 IDENT $@24 paramsFormais DOIS_PONTOS • tipoFunc PONTO_E_VIRGULA blocoPF

    IDENT  deslocar, e ir ao estado 127

    tipoFunc  ir ao estado 128


Estado 96

  100 paramsProc: ABRE_PARENTESES • $@20 listaParams FECHA_PARENTESES

    $padrão  reduzir usando a regra 99 ($@20)

    $@20  ir ao estado 129


Estado 97

   41 atribuicao_ou_proc: ATRIBUICAO • expressao

    ABRE_PARENTESES  deslocar, e ir ao estado 103
    IDENT            deslocar, e ir ao estado 104
    NUM              deslocar, e ir ao estado 105
    NOT              deslocar, e ir ao estado 106
    TRUE             deslocar, e ir ao estado 107
    FALSE            deslocar, e ir ao estado 108

    expressao          ir ao estado 130
    expressao_simples  ir ao estado 110
    termo              ir ao estado 111
    fator              ir ao estado 112


Estado 98

   28 comando_sem_rotulo: IDENT $@7 atribuicao_ou_proc •

    $padrão  reduzir usando a regra 28 (comando_sem_rotulo)


Estado 99
